tests/baselines/reference/noImplicitReturnsWithProtectedBlocks2.errors.txt
tests/cases/compiler/noImplicitReturnsWithProtectedBlocks2.ts(4,20): error TS7030: Not all code paths return a value.


==== tests/cases/compiler/noImplicitReturnsWithProtectedBlocks2.ts (1 errors) ====
    declare function log(s: string): void;
    declare function get(): number;
    
    function main1() : number {
                       ~~~~~~
!!! error TS7030: Not all code paths return a value.
        try {
            return get();
        }
        catch(e) {
            log("in catch");
        }
        finally {
            log("in finally");
        }
    }